; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_cluster.c_rebuild_relation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_cluster.c_rebuild_relation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i8, i32 }

@NoLock = common dso_local global i32 0, align 4
@AccessExclusiveLock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*, i32, i32)* @rebuild_relation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rebuild_relation(%struct.TYPE_9__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8, align 1
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %16 = call i32 @RelationGetRelid(%struct.TYPE_9__* %15)
  store i32 %16, i32* %7, align 4
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i64 @OidIsValid(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %3
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @mark_index_clustered(%struct.TYPE_9__* %26, i32 %27, i32 1)
  br label %29

29:                                               ; preds = %25, %3
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 0
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i8, i8* %33, align 4
  store i8 %34, i8* %10, align 1
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %36 = call i32 @IsSystemRelation(%struct.TYPE_9__* %35)
  store i32 %36, i32* %11, align 4
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %38 = load i32, i32* @NoLock, align 4
  %39 = call i32 @table_close(%struct.TYPE_9__* %37, i32 %38)
  %40 = load i32, i32* %7, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i8, i8* %10, align 1
  %43 = load i32, i32* @AccessExclusiveLock, align 4
  %44 = call i32 @make_new_heap(i32 %40, i32 %41, i8 signext %42, i32 %43)
  store i32 %44, i32* %9, align 4
  %45 = load i32, i32* %9, align 4
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %5, align 4
  %48 = load i32, i32* %6, align 4
  %49 = call i32 @copy_table_data(i32 %45, i32 %46, i32 %47, i32 %48, i32* %12, i32* %13, i32* %14)
  %50 = load i32, i32* %7, align 4
  %51 = load i32, i32* %9, align 4
  %52 = load i32, i32* %11, align 4
  %53 = load i32, i32* %12, align 4
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* %14, align 4
  %56 = load i8, i8* %10, align 1
  %57 = call i32 @finish_heap_swap(i32 %50, i32 %51, i32 %52, i32 %53, i32 0, i32 1, i32 %54, i32 %55, i8 signext %56)
  ret void
}

declare dso_local i32 @RelationGetRelid(%struct.TYPE_9__*) #1

declare dso_local i64 @OidIsValid(i32) #1

declare dso_local i32 @mark_index_clustered(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @IsSystemRelation(%struct.TYPE_9__*) #1

declare dso_local i32 @table_close(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @make_new_heap(i32, i32, i8 signext, i32) #1

declare dso_local i32 @copy_table_data(i32, i32, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @finish_heap_swap(i32, i32, i32, i32, i32, i32, i32, i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
